--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
   <!-- Navigation -->
  <nav>
-  <a href="../startbootstrap-resume-gh-pages/index.html">Resume</a>
+  <a href="startbootstrap-resume-gh-pages/index.html">Resume</a>
   <a href="ApexGym_Arcade/index.html">Game</a>
 </nav>
 
